--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
     "dependencies": {
+        "@chakra-ui/react": "^2.5.5",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "framer-motion": "^10.12.4",
+        "i": "^0.3.7",
         "next": "^13.2.4",
+        "npm": "^9.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0"
